salesforce/force-app/main/default/objects/Lead/fields/CRM_Score_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>CRM_Score_Ext_Id__c</fullName>
    <description>Id of this record in the scoring warehouse. The scoring agent only updates records that carry it.</description>
    <externalId>true</externalId>
    <label>CRM Score External Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>