salesforce/force-app/main/default/objects/Lead/fields/Lead_Grade__c.field-meta.xml
<CustomField>
    <fullName>Lead_Grade__c</fullName>
    <description>A is the top 15 percent, B the next 25, C the next 30, D the rest, at the time the model was calibrated.</description>
    <inlineHelpText>A is best. Tiers come from the current champion model.</inlineHelpText>
    <label>Lead Grade</label>
    <length>1</length>
    <type>Text</type>
</CustomField>