salesforce/force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <description>Calibrated chance of conversion within 30 days, 0 to 100. Written by the governance agent.</description>
    <inlineHelpText>Chance of conversion within 30 days, in percent. Set by the CRM scoring agents.</inlineHelpText>
    <label>Lead Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>