salesforce/force-app/main/default/objects/Lead/fields/Score_Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Score_Model_Version__c</fullName>
    <description>Model registry version that produced the score, for example lead-v23.</description>
    <label>Score Model Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>