salesforce/force-app/main/default/objects/Lead/fields/Score_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Score_Reasons__c</fullName>
    <description>Top features that lifted this score, with their contribution in points.</description>
    <inlineHelpText>What moved this score most, in points.</inlineHelpText>
    <label>Score Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>