salesforce/force-app/main/default/objects/Lead/fields/Score_Updated__c.field-meta.xml
<CustomField>
    <fullName>Score_Updated__c</fullName>
    <description>When the scoring agent last wrote this record.</description>
    <label>Score Updated</label>
    <type>DateTime</type>
</CustomField>